# dropin-cli-python

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.curator/: config.yaml
.github/workflows/: ci.yml
docs/adr/: 0000-record-architecture-decisions.md  0010-ai-curation-policy.md  README.md  TEMPLATE.md
examples/: echo-words.py  icons.py  requirements.txt
scripts/: check_adr_index.py  check_versions.py  fast_tests.sh
src/: cli.py
src/dropin_cli/: __init__.py
src/dropin_cli_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli.py
