[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropin-cli-python"
version = "0.1.0"
description = "Dependency-light helper to build single-file CLIs in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Arturo" }]
keywords = ["cli", "utilities", "dvdt", "command-line", "dropin"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]

[tool.setuptools]
py-modules = ["cli"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
target-version = "py39"
exclude = ["examples/**"]

[tool.ruff.lint]
select = [
  "E", "F",  # pycodestyle + pyflakes
  "I",        # isort
]
ignore = [
  "E402",  # allow path setup or future/docstring placement before imports
  "E501",  # long lines allowed initially; revisit after stabilization
]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = false
strict_optional = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
