[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropin-cli-python"
dynamic = ["version"]
description = "Dependency-light helper to build single-file CLIs in Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Arturo" }]
keywords = ["cli", "utilities", "dvdt", "command-line", "dropin"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dropin_cli"]
py-modules = ["cli"]

[tool.setuptools.dynamic]
version = { attr = "cli.__version__" }
[project.optional-dependencies]
pretty = [
  "rich>=13",
  "tabulate>=0.9",
  "PyYAML>=6",
  "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
target-version = "py39"
exclude = ["examples/**"]

[tool.ruff.lint]
select = [
  "E", "F",  # pycodestyle + pyflakes
  "I",        # isort
]
ignore = [
  "E402",  # allow path setup or future/docstring placement before imports
  "E501",  # long lines allowed initially; revisit after stabilization
]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = false
strict_optional = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true
check_untyped_defs = false
exclude = "examples/.*"
overrides = [
  { module = "tests.*", disallow_untyped_defs = false, disallow_incomplete_defs = false }
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
